update some markdown in the notebook

--- a/for_loops.ipynb
+++ b/for_loops.ipynb
@@ -5,11 +5,12 @@
    "id": "c59f4036-34bf-469f-8828-0b55286a29d0",
    "metadata": {},
    "source": [
-    "# For Loop Example Notebook for Vivian, Team Specialk\n",
-    "## Author Jeremy Delahanty 12/6/21\n",
-    "### Introduction\n",
+    "# For Loop Example Jupyter Notebook: Janelia Meyerhoff Scholars\n",
+    "## Introduction\n",
+    "Author Jeremy Delahanty 6/25/24\n",
     "\n",
-    "Hey, Vivan! Here's an introductory notebook about a few key concepts in Python: `strings`, `iterables`, `for loops`, and `If/Else statements`. We'll go over each of them one at a time and in a little detail via examples. This is my first attempt at explaining things to a budding programmer so let me know if none of this makes sense or is too far! We can go as slow as you need."
+    "\n",
+    "Hey there! Here's an introductory notebook about a few key concepts in Python: `strings`, `iterables`, `for loops`, and `If/Else statements`. We'll go over each of them one at a time and in a little detail via examples. This is my first attempt at explaining things to a budding programmer so let me know if none of this makes sense or is too far! We can go as slow as you need."
    ]
   },
   {
@@ -236,7 +237,7 @@
    "source": [
     "#### If/Else Statements: What are those?\n",
     "\n",
-    "An `if/else` statement is a type of command that Python, as well as basically all other programming languages, use for setting up `conditional` statements. For example, if you forget to write down frosting on your shopping list, then you won't be able to finish your cake later. You can also account for more than two choices by using `else if` aka `elif` in your code. We'll go through an example later...\n",
+    "An `if/else` statement is a type of command that Python, as well as basically all other programming languages, used for setting up `conditional` statements. For example, if you forget to write down frosting on your shopping list, then you won't be able to finish your cake later. You can also account for more than two choices by using `else if` aka `elif` in your code. We'll go through an example later...\n",
     "\n",
     "The way we check to see if something meets a condition precisely in Python is by using one of the following:\n",
     "\n",
